--- a/styles/style.css
+++ b/styles/style.css
@@ -215,7 +215,7 @@ a.btn-login{
 
     .images-content-1 img{
         display: block;
-        margin: 8% auto;
+        margin: 10% auto 2%;
         width: 360px;
     }
 
@@ -247,50 +247,6 @@ a.btn-login{
     }
 
     /* ------- End Content 3 ------- */
-}
-
-@media only screen and (min-width : 1080px) and  (max-width : 1360px) {
-
-
-    /* ------- Content 1 ------- */
-
-    .title-content-1{
-        margin: 10% 0 0;
-    }
-
-    .title-content-1 h1{
-        font-size: 38px;
-    }
-
-    .title-content-1 p{
-        font-size: 16px;
-    }
-
-    .button-explore{
-        font-size: 16px;
-    }
-
-    .images-content-1 img{
-        margin: 8% 0 0;
-        width: 520px;
-    }
-
-    /* ------- End Content 1 ------- */
-    
-    
-    /* ------- Content 2 ------- */
-
-    .title-contact-us h1{
-        font-size: 28px;
-        font-weight: 600;
-    }
-
-    .icon-contact-us img{
-        width: 40px;
-    }
-
-    /* ------- End Content 2 ------- */
-
 }
 
 /* ------- End Responsive Design ------- */
