menu regis final

--- a/regisCSS/regis.css
+++ b/regisCSS/regis.css
@@ -15,7 +15,7 @@
 }
 
 #regis-content{
-    background-image: url("../images/bg-login.png");
+    background-image: url("../imgs/bg-login.png");
     background-size: auto;
     background-repeat: no-repeat;
     height: 100vh;
