--- a/list-pages/styles/ListStyles.css
+++ b/list-pages/styles/ListStyles.css
@@ -5,20 +5,12 @@ body {
 .card {
     border: none;
     border-radius: 10px;
-    height: 50vh;
-}
-
-.icon {
-    width: 50px;
-    height: 50px;
-    background-color: #eee;
-    border-radius: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 39px
 }
 
 .smaller h6 {
     font-size: 14px;
+}
+
+.ftcards a {
+    width: 100%;
 }
