--- a/list-pages/styles/ListStyles.css
+++ b/list-pages/styles/ListStyles.css
@@ -11,12 +11,12 @@ body {
     font-size: 14px;
 }
 
-/* .ftcards img {
+.ftcards img {
     float: left;
     width:  100%;
     height: 100%;
     object-fit: cover;
-} */
+}
 
 .ftcards a {
     width: 100%;
