--- a/styles/regis.css
+++ b/styles/regis.css
@@ -82,7 +82,7 @@
     color: var(--main-bgcolor);
 }
 
-@media only screen and (min-width : 320px) and (max-width : 480px) {
+@media only screen and (max-width : 1200px) {
     #regis-content{
         background-size: cover;
         padding: 0 2%;
@@ -91,7 +91,7 @@
     .regis-column{
         margin: 25% 0 0;
         padding: 4%;
-        background-color: rgba(255, 255, 255, 0.8);
+        background-color: rgba(255, 255, 255, 0.95);
         border-radius: 10px;
     }
 
